--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -22,7 +22,8 @@ dependencies = [
     "langchain-chroma (>=0.2.2,<0.3.0)",
     "sentence-transformers (>=3.4.1,<4.0.0)",
     "selenium (>=4.30.0,<5.0.0)",
-    "bs4 (>=0.0.2,<0.0.3)"
+    "bs4 (>=0.0.2,<0.0.3)",
+    "pytest (>=8.3.5,<9.0.0)"
 ]
 
 
